# Bubble

./: AUTHORS  Makefile.am  bootstrap.sh  configure.ac  launch.sh
src/: ai.cc  ai.hh  board.cc  board.hh  cmd.cc  cmd.hh  gui.cc  gui.hh  interface.cc  interface.hh  main.cc  piece.cc  piece.hh
